<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:weightSum="8"
    android:orientation="vertical"
    tools:context=".LaunchActivity">

    <TextView
        android:id="@+id/instructionsTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction_text"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:paddingTop="20dp"
        />

    <TextView
        android:id="@+id/swipeForMoreTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/swipe_for_more_text"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/textColor" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_weight="8"
        android:layout_height="wrap_content">

    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_text"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/textColor"/>

</LinearLayout>