<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal"
    tools:context=".SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splashIcon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/rock_icon" />

        <ImageView
            android:id="@+id/splashIcon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/paper_icon" />

        <ImageView
            android:id="@+id/splashIcon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/scissors_icon" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/splashTxt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/rock_text"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/splashTxt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/paper_text"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/splashTxt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/scissors_text"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="28sp" />

    </LinearLayout>


</LinearLayout>